// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`<ToggleButton/> renders correctly if checked 1`] = `
<div
  className="ToggleStyled-hpSctc cNwmaA"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-iqJNYz cCwlqu"
    disabled={false}
    htmlFor="toggle-2"
  >
    <div
      className="ToggleBarBoxStyled-cBeZVR heeuOl"
      disabled={false}
    >
      <label
        checked={true}
        className="ToggleBarStyled-kcTwBB jXzuUU"
        disabled={false}
        htmlFor="toggle-2"
      />
      <input
        checked={true}
        className="ToggleInputStyled-cniALy dfMZHO"
        disabled={false}
        id="toggle-2"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly if checked and disabled 1`] = `
<div
  className="ToggleStyled-hpSctc hKhcQp"
  disabled={true}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-iqJNYz NOqCm"
    disabled={true}
    htmlFor="toggle-3"
  >
    <div
      className="ToggleBarBoxStyled-cBeZVR fHkSgk"
      disabled={true}
    >
      <label
        checked={true}
        className="ToggleBarStyled-kcTwBB ihyzJK"
        disabled={true}
        htmlFor="toggle-3"
      />
      <input
        checked={true}
        className="ToggleInputStyled-cniALy dfMZHO"
        disabled={true}
        id="toggle-3"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly if disabled 1`] = `
<div
  className="ToggleStyled-hpSctc hKhcQp"
  disabled={true}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-iqJNYz NOqCm"
    disabled={true}
    htmlFor="toggle-1"
  >
    <div
      className="ToggleBarBoxStyled-cBeZVR fHkSgk"
      disabled={true}
    >
      <label
        checked={false}
        className="ToggleBarStyled-kcTwBB haaxXZ"
        disabled={true}
        htmlFor="toggle-1"
      />
      <input
        checked={false}
        className="ToggleInputStyled-cniALy dfMZHO"
        disabled={true}
        id="toggle-1"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly if focused 1`] = `
<div
  className="ToggleStyled-hpSctc cNwmaA"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-iqJNYz cCwlqu"
    disabled={false}
    htmlFor="toggle-11"
  >
    <div
      className="ToggleBarBoxStyled-cBeZVR heeuOl"
      disabled={false}
    >
      <label
        checked={false}
        className="ToggleBarStyled-kcTwBB aFLLg"
        disabled={false}
        htmlFor="toggle-11"
      />
      <input
        checked={false}
        className="ToggleInputStyled-cniALy dfMZHO"
        disabled={false}
        id="toggle-11"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly if focused 2`] = `
<div
  className="ToggleStyled-hpSctc cNwmaA"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-iqJNYz cCwlqu"
    disabled={false}
    htmlFor="toggle-11"
  >
    <div
      className="ToggleBarBoxStyled-cBeZVR heeuOl"
      disabled={false}
    >
      <label
        checked={false}
        className="ToggleBarStyled-kcTwBB gTkPlS"
        disabled={false}
        htmlFor="toggle-11"
      />
      <input
        checked={false}
        className="ToggleInputStyled-cniALy dfMZHO"
        disabled={false}
        id="toggle-11"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly if focused 3`] = `
<div
  className="ToggleStyled-hpSctc cNwmaA"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-iqJNYz cCwlqu"
    disabled={false}
    htmlFor="toggle-11"
  >
    <div
      className="ToggleBarBoxStyled-cBeZVR heeuOl"
      disabled={false}
    >
      <label
        checked={false}
        className="ToggleBarStyled-kcTwBB aFLLg"
        disabled={false}
        htmlFor="toggle-11"
      />
      <input
        checked={false}
        className="ToggleInputStyled-cniALy dfMZHO"
        disabled={false}
        id="toggle-11"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly if handles input change and call onChange 1`] = `
<div
  className="ToggleStyled-hpSctc cNwmaA"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-iqJNYz cCwlqu"
    disabled={false}
    htmlFor="toggle-12"
  >
    <div
      className="ToggleBarBoxStyled-cBeZVR heeuOl"
      disabled={false}
    >
      <label
        checked={true}
        className="ToggleBarStyled-kcTwBB jXzuUU"
        disabled={false}
        htmlFor="toggle-12"
      />
      <input
        checked={true}
        className="ToggleInputStyled-cniALy dfMZHO"
        disabled={false}
        id="toggle-12"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly if hovered 1`] = `
<div
  className="ToggleStyled-hpSctc cNwmaA"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-iqJNYz cCwlqu"
    disabled={false}
    htmlFor="toggle-10"
  >
    <div
      className="ToggleBarBoxStyled-cBeZVR heeuOl"
      disabled={false}
    >
      <label
        checked={false}
        className="ToggleBarStyled-kcTwBB aFLLg"
        disabled={false}
        htmlFor="toggle-10"
      />
      <input
        checked={false}
        className="ToggleInputStyled-cniALy dfMZHO"
        disabled={false}
        id="toggle-10"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly if hovered 2`] = `
<div
  className="ToggleStyled-hpSctc cNwmaA"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-iqJNYz cCwlqu"
    disabled={false}
    htmlFor="toggle-10"
  >
    <div
      className="ToggleBarBoxStyled-cBeZVR heeuOl"
      disabled={false}
    >
      <label
        checked={false}
        className="ToggleBarStyled-kcTwBB gTkPlS"
        disabled={false}
        htmlFor="toggle-10"
      />
      <input
        checked={false}
        className="ToggleInputStyled-cniALy dfMZHO"
        disabled={false}
        id="toggle-10"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly if hovered 3`] = `
<div
  className="ToggleStyled-hpSctc cNwmaA"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-iqJNYz cCwlqu"
    disabled={false}
    htmlFor="toggle-10"
  >
    <div
      className="ToggleBarBoxStyled-cBeZVR heeuOl"
      disabled={false}
    >
      <label
        checked={false}
        className="ToggleBarStyled-kcTwBB aFLLg"
        disabled={false}
        htmlFor="toggle-10"
      />
      <input
        checked={false}
        className="ToggleInputStyled-cniALy dfMZHO"
        disabled={false}
        id="toggle-10"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly with default props 1`] = `
<div
  className="ToggleStyled-hpSctc cNwmaA"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-iqJNYz cCwlqu"
    disabled={false}
    htmlFor="toggle-0"
  >
    <div
      className="ToggleBarBoxStyled-cBeZVR heeuOl"
      disabled={false}
    >
      <label
        checked={false}
        className="ToggleBarStyled-kcTwBB aFLLg"
        disabled={false}
        htmlFor="toggle-0"
      />
      <input
        checked={false}
        className="ToggleInputStyled-cniALy dfMZHO"
        disabled={false}
        id="toggle-0"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly with label 1`] = `
<div
  className="ToggleStyled-hpSctc cNwmaA"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-iqJNYz cCwlqu"
    disabled={false}
    htmlFor="toggle-5"
  >
    <div
      className="ToggleBarBoxStyled-cBeZVR heeuOl"
      disabled={false}
    >
      <label
        checked={false}
        className="ToggleBarStyled-kcTwBB aFLLg"
        disabled={false}
        htmlFor="toggle-5"
      />
      <input
        checked={false}
        className="ToggleInputStyled-cniALy dfMZHO"
        disabled={false}
        id="toggle-5"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
    <span
      checked={false}
      className="ToggleLabelTextBoxStyled-epGXVn XtjXC"
      disabled={false}
    >
      <span
        className="ToggleLabelTextStyled-geBoni jSzCbs"
      >
        Foo
      </span>
    </span>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly with tooltip and label 1`] = `
<div
  className="ToggleStyled-hpSctc cNwmaA"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-iqJNYz cCwlqu"
    disabled={false}
    htmlFor="toggle-4"
  >
    <div
      className="ToggleBarBoxStyled-cBeZVR heeuOl"
      disabled={false}
    >
      <label
        checked={false}
        className="ToggleBarStyled-kcTwBB aFLLg"
        disabled={false}
        htmlFor="toggle-4"
      />
      <input
        checked={false}
        className="ToggleInputStyled-cniALy dfMZHO"
        disabled={false}
        id="toggle-4"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
    <span
      checked={false}
      className="ToggleLabelTextBoxStyled-epGXVn XtjXC"
      disabled={false}
    >
      <span
        className="ToggleLabelTextStyled-geBoni evgnHk"
      >
        Foo
      </span>
      <span
        className="ToggleTooltipBoxStyled-ehykpg jWsDJG"
      >
        <div
          className="TooltipIconStyled-egvEre kUiAus"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
        >
          <span>
            ?
          </span>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly with tooltip, label and checked 1`] = `
<div
  className="ToggleStyled-hpSctc cNwmaA"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-iqJNYz cCwlqu"
    disabled={false}
    htmlFor="toggle-7"
  >
    <div
      className="ToggleBarBoxStyled-cBeZVR heeuOl"
      disabled={false}
    >
      <label
        checked={true}
        className="ToggleBarStyled-kcTwBB jXzuUU"
        disabled={false}
        htmlFor="toggle-7"
      />
      <input
        checked={true}
        className="ToggleInputStyled-cniALy dfMZHO"
        disabled={false}
        id="toggle-7"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
    <span
      checked={true}
      className="ToggleLabelTextBoxStyled-epGXVn XtjXC"
      disabled={false}
    >
      <span
        className="ToggleLabelTextStyled-geBoni evgnHk"
      >
        Foo
      </span>
      <span
        className="ToggleTooltipBoxStyled-ehykpg jWsDJG"
      >
        <div
          className="TooltipIconStyled-egvEre kUiAus"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
        >
          <span>
            ?
          </span>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly with tooltip, label and disabled 1`] = `
<div
  className="ToggleStyled-hpSctc hKhcQp"
  disabled={true}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-iqJNYz NOqCm"
    disabled={true}
    htmlFor="toggle-8"
  >
    <div
      className="ToggleBarBoxStyled-cBeZVR fHkSgk"
      disabled={true}
    >
      <label
        checked={false}
        className="ToggleBarStyled-kcTwBB haaxXZ"
        disabled={true}
        htmlFor="toggle-8"
      />
      <input
        checked={false}
        className="ToggleInputStyled-cniALy dfMZHO"
        disabled={true}
        id="toggle-8"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
    <span
      checked={false}
      className="ToggleLabelTextBoxStyled-epGXVn lnKhrU"
      disabled={true}
    >
      <span
        className="ToggleLabelTextStyled-geBoni evgnHk"
      >
        Foo
      </span>
      <span
        className="ToggleTooltipBoxStyled-ehykpg jWsDJG"
      >
        <div
          className="TooltipIconStyled-egvEre kUiAus"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
        >
          <span>
            ?
          </span>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly with tooltip, label, disabled and checked 1`] = `
<div
  className="ToggleStyled-hpSctc hKhcQp"
  disabled={true}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-iqJNYz NOqCm"
    disabled={true}
    htmlFor="toggle-9"
  >
    <div
      className="ToggleBarBoxStyled-cBeZVR fHkSgk"
      disabled={true}
    >
      <label
        checked={true}
        className="ToggleBarStyled-kcTwBB ihyzJK"
        disabled={true}
        htmlFor="toggle-9"
      />
      <input
        checked={true}
        className="ToggleInputStyled-cniALy dfMZHO"
        disabled={true}
        id="toggle-9"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
    <span
      checked={true}
      className="ToggleLabelTextBoxStyled-epGXVn lnKhrU"
      disabled={true}
    >
      <span
        className="ToggleLabelTextStyled-geBoni evgnHk"
      >
        Foo
      </span>
      <span
        className="ToggleTooltipBoxStyled-ehykpg jWsDJG"
      >
        <div
          className="TooltipIconStyled-egvEre kUiAus"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
        >
          <span>
            ?
          </span>
        </div>
      </span>
    </span>
  </label>
</div>
`;

exports[`<ToggleButton/> renders correctly with tooltip, label, labelPosition=right 1`] = `
<div
  className="ToggleStyled-hpSctc cNwmaA"
  disabled={false}
  onMouseEnter={[Function]}
  onMouseLeave={[Function]}
>
  <label
    className="ToggleLabelStyled-iqJNYz cCwlqu"
    disabled={false}
    htmlFor="toggle-6"
  >
    <div
      className="ToggleBarBoxStyled-cBeZVR gapsjO"
      disabled={false}
    >
      <label
        checked={false}
        className="ToggleBarStyled-kcTwBB aFLLg"
        disabled={false}
        htmlFor="toggle-6"
      />
      <input
        checked={false}
        className="ToggleInputStyled-cniALy dfMZHO"
        disabled={false}
        id="toggle-6"
        onBlur={[Function]}
        onChange={[Function]}
        onFocus={[Function]}
        tabIndex={0}
        type="checkbox"
      />
    </div>
    <span
      checked={false}
      className="ToggleLabelTextBoxStyled-epGXVn bvDycJ"
      disabled={false}
    >
      <span
        className="ToggleLabelTextStyled-geBoni evgnHk"
      >
        Foo
      </span>
      <span
        className="ToggleTooltipBoxStyled-ehykpg jWsDJG"
      >
        <div
          className="TooltipIconStyled-egvEre kUiAus"
          onBlur={[Function]}
          onClick={[Function]}
          onFocus={[Function]}
          onMouseEnter={[Function]}
          onMouseLeave={[Function]}
          tabIndex={0}
        >
          <span>
            ?
          </span>
        </div>
      </span>
    </span>
  </label>
</div>
`;
